# vast

./: .gitignore  README.md  check.bat  example_pyvis-based_ast_visualization.html  pyproject.toml  requirements.txt  setup.cfg
docs/source/: conf.py
tests/: test_visast.py
visast/: __main__.py  generate.py  visualise.py
